# honors-thesis

./: README.md  REUSE.toml  justfile
.helix/: languages.toml
references/: 1_introduction.bib
source/: 0_index.typ  1-introduction.typ  1_intro.typ  1_introduction.typ  2-motivating-example.typ  2-rationale.typ  2_foundations.typ  3-foundations.typ  3-syntax.typ  3_formal_reasoning.typ  3_information_organization.typ  3_information_systems.typ  4-metatheory.typ  4-semantics.typ  4-syntax.typ  4_language.typ  5-information-organization.typ  5-metatheory.typ  5-semantics.typ  5-syntax.typ  5_bootstrap.typ  6-bootstrap.typ  6-conclusion.typ  6-information-organization.typ  6_conclusion.typ  7-bootstrap.typ  7-conclusion.typ  LL(1)_refactor.typ  a3-bootstrap.typ  bootstrap.typ  conclusion.typ  foundations.typ  grammar.typ  index.typ  information_compression.typ  information_graphs.typ  information_systems.typ  information_theory.typ  introduction.typ  ll(1)_grammar.typ  (+5 more)
source/LL1/: grammar.typ  predict-table.typ  refactor.typ  table.typ  transforms.typ
source/presentation/: ams-slides.csl  compare-list.typ  index.typ  references.bib  template.typ
source/references/: 1-introduction.bib  1_introduction.bib  2-rationale.bib  2_foundations.bib  3-foundations.bib  4-metatheory.bib  4-syntax.bib  5-metatheory.bib  5-syntax.bib  6-information-organization.bib  7-conclusion.bib  general.bib  intro.bib  misc.bib  references.bib
source/template/: american-mathematical-society-label.csl  ams-article.typ  types.typ  (+1 more)
template/: ams-math.typ
tools/reuse-env/: pyproject.toml
(+17 files in other folders)
